--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "shared-code": "git+https://github.com/outcomesresearch/shared-code.git",
+    "vue": "^2.6.11",
+    "vuetify": "^2.6.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.13",
-    "@vue/cli-plugin-eslint": "~4.5.13",
-    "@vue/cli-service": "~4.5.13",
+    "@vue/cli-plugin-babel": "5.0",
+    "@vue/cli-plugin-eslint": "5.0",
+    "@vue/cli-service": "5.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "deepmerge": "^4.2.2",
+    "eslint": "7.0",
+    "eslint-plugin-vue": "7.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^12.6.0",
+    "vue-cli-plugin-vuetify": "~2.4.8",
     "vue-template-compiler": "^2.6.11"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true
   },
   "eslintConfig": {
     "root": true,
