--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           ls -la
           npm install
+          npm update shared-code
           npm run build
           ls -la
 
